force-app/main/default/objects/SFDC_Answer__c/SFDC_Answer__c.object-meta.xml
<CustomObject>
    <description>The range of possible answers for a given question. Each answer has a score, and caller coaching, and determines the follow on question to ask.</description>
    <label>Answer</label>
    <nameField>
        <displayFormat>AN-{000000}</displayFormat>
        <label>Answer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>