force-app/main/default/objects/SFDC_Answer__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to store text values in an &apos;other&apos; field</description>
    <label>Other Answer</label>
    <type>Checkbox</type>
</CustomField>