force-app/main/default/objects/SFDC_Answer__c/fields/Questions__c.field-meta.xml
<CustomField>
    <fullName>Questions__c</fullName>
    <description>The question object that the answer applies to.</description>
    <label>Question</label>
    <referenceTo>SFDC_Questions__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>R00N60000001WdfbEAC</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>