force-app/main/default/objects/SFDC_Answer__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>The relative weight assigned to this answer.  Note: This is relative weight, not absolute weight.</description>
    <label>Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>